generated-tests/tests/snapshots/tsx/test_generated_identifier.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
identifier

AST:
(program
  (expression_statement
    (identifier identifier)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "identifier",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 11,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
