generated-tests/tests/snapshots/tsx/test_generated_infer_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type Test<T2> = T2 extends infer U ? U : never; const value11: Test<string> = 'test';

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
      )
    )
    (conditional_type
      (type_identifier)
      (infer_type
        (type_identifier)
      )
      (type_identifier)
      (predefined_type)
    )
  )
  (lexical_declaration
    (variable_declarator
      (identifier value11)
      (type_annotation
        (generic_type
          (type_identifier)
          (type_arguments
            (predefined_type)
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
        Definition {
            name: "T2",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
        Definition {
            name: "value11",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "T2",
            kind: TypeIdentifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "U",
            kind: TypeIdentifier,
            scope: None,
            start_line: 1,
            start_column: 34,
            end_line: 1,
            end_column: 35,
        },
        SerializableUsage {
            name: "U",
            kind: TypeIdentifier,
            scope: None,
            start_line: 1,
            start_column: 38,
            end_line: 1,
            end_column: 39,
        },
        SerializableUsage {
            name: "Test",
            kind: TypeIdentifier,
            scope: None,
            start_line: 1,
            start_column: 64,
            end_line: 1,
            end_column: 68,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
