generated-tests/tests/snapshots/tsx/test_generated_intersection_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value12: { a: number } & { b: string } = { a: 42, b: 'test' };

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value12)
      (type_annotation
        (intersection_type
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
        )
      )
      (object
        (pair
          (property_identifier)
          (number)
        )
        (pair
          (property_identifier)
          (string
            (string_fragment)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value12",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "a",
            line_number: 1,
            definition_type: PropertyDefinition,
            scope: None,
        },
        Definition {
            name: "b",
            line_number: 1,
            definition_type: PropertyDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "a",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "b",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 34,
            end_line: 1,
            end_column: 35,
        },
        SerializableUsage {
            name: "a",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 50,
            end_line: 1,
            end_column: 51,
        },
        SerializableUsage {
            name: "b",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 57,
            end_line: 1,
            end_column: 58,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
