generated-tests/tests/snapshots/tsx/test_generated_jsx_attribute.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div prop1={value13}>Content</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier div)
          (jsx_attribute
            (property_identifier)
            (jsx_expression
              (identifier value13)
            )
          )
        )
        (jsx_text)
        (jsx_closing_element
          (identifier div)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "div",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 21,
            },
        },
        Usage {
            name: "prop1",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 22,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "value13",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 36,
            },
        },
        Usage {
            name: "div",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 47,
                end_line: 1,
                end_column: 50,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
