generated-tests/tests/snapshots/tsx/test_generated_jsx_closing_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component>Content</Component>

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier Component)
        )
        (jsx_text)
        (jsx_closing_element
          (identifier Component)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "Component",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 27,
        },
        SerializableUsage {
            name: "Component",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 37,
            end_line: 1,
            end_column: 46,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
