generated-tests/tests/snapshots/tsx/test_generated_jsx_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div>{value14}</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier div)
        )
        (jsx_expression
          (identifier value14)
        )
        (jsx_closing_element
          (identifier div)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "div",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 21,
        },
        SerializableUsage {
            name: "value14",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 23,
            end_line: 1,
            end_column: 30,
        },
        SerializableUsage {
            name: "div",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 33,
            end_line: 1,
            end_column: 36,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
