generated-tests/tests/snapshots/tsx/test_generated_jsx_opening_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component1 prop2={value15}></Component1>

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier Component1)
          (jsx_attribute
            (property_identifier)
            (jsx_expression
              (identifier value15)
            )
          )
        )
        (jsx_closing_element
          (identifier Component1)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "Component1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 28,
        },
        SerializableUsage {
            name: "prop2",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 29,
            end_line: 1,
            end_column: 34,
        },
        SerializableUsage {
            name: "value15",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 36,
            end_line: 1,
            end_column: 43,
        },
        SerializableUsage {
            name: "Component1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 47,
            end_line: 1,
            end_column: 57,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
